Finalização do registro e login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
-    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+          name="viewport"/>
+    <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
     <title>Login</title>
 </head>
 <body>
@@ -20,8 +20,6 @@
 
     <p>
         <input type="submit" value="Entrar"/>
-        <input id="lembrar-login" name="lembrar-login" type="checkbox"> <label for="lembrar-login">Lembrar
-        login?</label>
     </p>
 </form>
 <span>Não possui um cadastro? <a href="/registro">Registre-se</a></span>
