--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -2,10 +2,8 @@
 <html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8"/>
-    <meta
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-            name="viewport"
-    />
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport"/>
     <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
 
     <link href="css/global.css" rel="stylesheet"/>
@@ -13,10 +11,7 @@
 
     <link href="https://fonts.googleapis.com" rel="preconnect"/>
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
-    <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"
-            rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet"/>
 
     <title>Registro de Paciente</title>
 </head>
@@ -27,84 +22,41 @@
     <span>Já possui um cadastro? <a href="/login">Logar</a></span>
 </header>
 
-<form
-        action="/registro"
-        enctype="utf8"
-        method="POST"
-        th:object="${registroPacienteDTO}"
->
+<form action="/registro" enctype="utf8" method="POST" th:object="${registroPacienteDTO}">
     <div class="form-section">
         <h2>Informações gerais</h2>
         <div>
             <label for="nome">Nome completo:</label>
-            <input
-                    id="nome"
-                    placeholder="João da Silva"
-                    th:field="*{pessoaDTO.nome}"
-                    type="text"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.nome')}"
-            ></div>
+            <input id="nome" placeholder="João da Silva" th:field="*{pessoaDTO.nome}" type="text"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.nome')}"></div>
         </div>
         <div>
             <label for="cpf">CPF:</label>
-            <input
-                    id="cpf"
-                    placeholder="123.456.789-09"
-                    th:field="*{pessoaDTO.cpf}"
-                    type="text"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.cpf')}"
-            ></div>
+            <input id="cpf" placeholder="123.456.789-09" th:field="*{pessoaDTO.cpf}" type="text"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.cpf')}"></div>
         </div>
         <div>
             <label for="identidade">RG:</label>
-            <input
-                    id="identidade"
-                    placeholder="12.345.678-9"
-                    th:field="*{pessoaDTO.rg}"
-                    type="text"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.rg')}"
-            ></div>
+            <input id="identidade" placeholder="12.345.678-9" th:field="*{pessoaDTO.rg}" type="text"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.rg')}"></div>
         </div>
         <div>
             <label for="dataNascimento">Data de Nascimento:</label>
-            <input
-                    id="dataNascimento"
-                    placeholder="01/01/1970"
-                    th:field="*{pessoaDTO.dataNascimento}"
-                    type="date"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.dataNascimento')}"
-            ></div>
+            <input id="dataNascimento" placeholder="01/01/1970" th:field="*{pessoaDTO.dataNascimento}" type="date"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.dataNascimento')}"></div>
         </div>
         <div>
             <label for="genero">Gênero:</label>
             <select id="genero" th:field="*{pessoaDTO.generoDTO.id}">
                 <option value="-1">-- Selecione a opção --</option>
-                <option
-                        th:each="genero : ${generos}"
-                        th:text="${genero.getDescricao()}"
-                        th:value="${genero.ordinal()}"
-                ></option>
+                <option th:each="genero : ${generos}" th:text="${genero.getDescricao()}"
+                        th:value="${genero.ordinal()}"></option>
             </select>
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.generoDTO.id')}"
-            ></div>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.generoDTO.id')}"></div>
         </div>
         <div>
             <label for="senha">Senha:</label>
-            <input
-                    id="senha"
-                    placeholder="Senha secreta"
-                    th:field="*{senha}"
-                    type="password"
-            />
+            <input id="senha" placeholder="Senha secreta" th:field="*{senha}" type="password"/>
             <div th:replace="~{fragments :: listaErros('senha')}"></div>
         </div>
     </div>
@@ -113,27 +65,13 @@
         <h2>Contato</h2>
         <div>
             <label for="celular">Celular:</label>
-            <input
-                    id="celular"
-                    placeholder="(84) 9 1234-5678"
-                    th:field="*{pessoaDTO.celular}"
-                    type="tel"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.celular')}"
-            ></div>
+            <input id="celular" placeholder="(84) 9 1234-5678" th:field="*{pessoaDTO.celular}" type="tel"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.celular')}"></div>
         </div>
         <div>
             <label for="email">E-mail:</label>
-            <input
-                    id="email"
-                    placeholder="joao.silva@email.com"
-                    th:field="*{pessoaDTO.email}"
-                    type="email"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.email')}"
-            ></div>
+            <input id="email" placeholder="joao.silva@email.com" th:field="*{pessoaDTO.email}" type="email"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.email')}"></div>
         </div>
     </div>
 
@@ -141,75 +79,35 @@
         <h2>Endereço</h2>
         <div>
             <label for="cep">CEP:</label>
-            <input
-                    id="cep"
-                    placeholder="59078-900"
-                    th:field="*{pessoaDTO.enderecoDTO.cep}"
-                    type="text"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.cep')}"
-            ></div>
+            <input id="cep" placeholder="59078-900" th:field="*{pessoaDTO.enderecoDTO.cep}" type="text"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.cep')}"></div>
         </div>
         <div>
             <label for="numero">Número:</label>
-            <input
-                    id="numero"
-                    placeholder="01"
-                    th:field="*{pessoaDTO.enderecoDTO.numero}"
-                    type="text"
+            <input id="numero" placeholder="01" th:field="*{pessoaDTO.enderecoDTO.numero}" type="text"
             />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.numero')}"
-            ></div>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.numero')}"></div>
         </div>
         <div>
             <label for="logradouro">Logradouro:</label>
-            <input
-                    id="logradouro"
-                    placeholder="Av. Cap. Mor Gouveia"
-                    th:field="*{pessoaDTO.enderecoDTO.logradouro}"
-                    type="text"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.logradouro')}"
-            ></div>
+            <input id="logradouro" placeholder="Av. Cap. Mor Gouveia" th:field="*{pessoaDTO.enderecoDTO.logradouro}"
+                   type="text"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.logradouro')}"></div>
         </div>
         <div>
             <label for="bairro">Bairro:</label>
-            <input
-                    id="bairro"
-                    placeholder="Lagoa Nova"
-                    th:field="*{pessoaDTO.enderecoDTO.bairro}"
-                    type="text"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.bairro')}"
-            ></div>
+            <input id="bairro" placeholder="Lagoa Nova" th:field="*{pessoaDTO.enderecoDTO.bairro}" type="text"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.bairro')}"></div>
         </div>
         <div>
             <label for="cidade">Cidade:</label>
-            <input
-                    id="cidade"
-                    placeholder="Natal"
-                    th:field="*{pessoaDTO.enderecoDTO.cidade}"
-                    type="text"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.cidade')}"
-            ></div>
+            <input id="cidade" placeholder="Natal" th:field="*{pessoaDTO.enderecoDTO.cidade}" type="text"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.cidade')}"></div>
         </div>
         <div>
             <label for="UF">UF:</label>
-            <input
-                    id="UF"
-                    placeholder="RN"
-                    th:field="*{pessoaDTO.enderecoDTO.uf}"
-                    type="text"
-            />
-            <div
-                    th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.uf')}"
-            ></div>
+            <input id="UF" placeholder="RN" th:field="*{pessoaDTO.enderecoDTO.uf}" type="text"/>
+            <div th:replace="~{fragments :: listaErros('pessoaDTO.enderecoDTO.uf')}"></div>
         </div>
     </div>
     <div class="form-section">
