--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,6 +22,6 @@
         <input type="submit" value="Entrar"/>
     </p>
 </form>
-<span>Não possui um cadastro? <a href="/registro">Registre-se</a></span>
+<span>Não possui um cadastro? <a href="/cadastro/paciente">Registre-se</a></span>
 </body>
 </html>
