--- a/src/main/resources/templates/indexAdmin.html
+++ b/src/main/resources/templates/indexAdmin.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
@@ -9,7 +9,10 @@
 </head>
 <body>
 <a href="/logout">Sair</a>
-<h1  th:text="${usuario.pessoa.nome}"></h1>
-<p>Você agora está logado.</p>
+
+<h1>Página Admin</h1>
+
+<a href="/cadastro/dentista">Cadastro de Dentista</a>
+
 </body>
 </html>
