--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <title>Login</title>
 </head>
 <body>
-<span th:if="${error == true}">Erro ao logar, tente novamente.</span>
+<span th:if="${error}">Erro ao logar, tente novamente.</span>
 <form method="POST" th:action="@{/login}">
     <p>
         <label for="cpf">CPF:</label>
