correção de bug no agendamento controller

--- a/src/main/resources/templates/indexPaciente.html
+++ b/src/main/resources/templates/indexPaciente.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <a href="/logout">Sair</a>
+<a href="/agendamento">Agendamento</a>
 <h1 th:text="${usuario.pessoa.nome}"></h1>
 <p>Você agora está logado. (Paciente)</p>
 </body>
