--- a/src/main/resources/templates/indexDentista.html
+++ b/src/main/resources/templates/indexDentista.html
@@ -5,6 +5,10 @@
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
+
+    <link href="https://cdn.jsdelivr.net/npm/@event-calendar/build@2.3.3/event-calendar.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@event-calendar/build@2.3.3/event-calendar.min.js"></script>
+
     <title>Dashboard</title>
 </head>
 <body>
@@ -21,7 +25,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr  th:each="agendamento : ${agendamentos}"   class="list-group-item">
+    <tr class="list-group-item" th:each="agendamento : ${agendamentos}">
         <td th:text="${agendamento.getPaciente().getPessoa().getNome()}"></td>
         <td th:text="${#dates.format(agendamento.getDataConsulta(),'dd/MM/yyyy') + ' ' + #dates.format(agendamento.getHoraConsulta(),'HH:mm')}"></td>
         <td><a th:href="@{/agendamento/{id}(id=${agendamento.getId()})}">✓</a></td>
@@ -30,5 +34,72 @@
     </tbody>
 </table>
 
+<div id="calendario-agendamentos"></div>
+
 </body>
+
+<script>
+    let ec = new EventCalendar(document.getElementById('calendario-agendamentos'), {
+        locale: 'pt-BR',
+        view: 'timeGridWeek',
+        headerToolbar: {
+            start: '',
+            center: 'title',
+            end: ''
+        },
+        buttonText: {
+            close: 'Close',
+            dayGridMonth: 'mês',
+            listDay: 'list',
+            listMonth: 'list',
+            listWeek: 'list',
+            listYear: 'list',
+            resourceTimeGridDay: 'day',
+            resourceTimeGridWeek: 'week',
+            timeGridDay: 'day',
+            timeGridWeek: 'week',
+            today: 'hoje'
+        },
+        allDaySlot: false,
+        scrollTime: '09:00:00',
+        slotDuration: '01:00',
+        events: createEvents(),
+        dayMaxEvents: true,
+        nowIndicator: true,
+        selectable: false,
+        editable: false,
+        height: '900px',
+    });
+
+    function createEvents() {
+        let days = [];
+        for (let i = 0; i < 7; ++i) {
+            let day = new Date();
+            let diff = i - day.getDay();
+            day.setDate(day.getDate() + diff);
+            days[i] = day.getFullYear() + "-" + _pad(day.getMonth()+1) + "-" + _pad(day.getDate());
+        }
+
+        return [
+            {start: days[0] + " 00:00", end: days[0] + " 09:00", display: "background"},
+            {start: days[1] + " 12:00", end: days[1] + " 14:00", display: "background"},
+            {start: days[2] + " 17:00", end: days[2] + " 24:00", display: "background"},
+            {start: days[0] + " 10:00", end: days[0] + " 14:00", title: "The calendar can display background and regular events", color: "#FE6B64"},
+            {start: days[1] + " 16:00", end: days[2] + " 08:00", title: "An event may span to another day", color: "#B29DD9"},
+            {start: days[2] + " 09:00", end: days[2] + " 13:00", title: "Events can be assigned to resources and the calendar has the resources view built-in", color: "#779ECB"},
+            {start: days[3] + " 14:00", end: days[3] + " 20:00", title: "", color: "#FE6B64"},
+            {start: days[3] + " 15:00", end: days[3] + " 18:00", title: "Overlapping events are positioned properly", color: "#779ECB"},
+            {start: days[5] + " 10:00", end: days[5] + " 16:00", title: {html: "You have complete control over the <i><b>display</b></i> of events…"}, color: "#779ECB"},
+            {start: days[5] + " 14:00", end: days[5] + " 19:00", title: "…and you can drag and drop the events!", color: "#FE6B64"},
+            {start: days[5] + " 18:00", end: days[5] + " 21:00", title: "", color: "#B29DD9"},
+        ];
+    }
+
+    function _pad(num) {
+        let norm = Math.floor(Math.abs(num));
+        return (norm < 10 ? '0' : '') + norm;
+    }
+
+</script>
+
 </html>
