adição do calendario na tela home de dentista

--- a/src/main/resources/templates/cadastroDentista.html
+++ b/src/main/resources/templates/cadastroDentista.html
@@ -14,9 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet"/>
 
     <title>Cadastro de Paciente</title>
+
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 
 <body>
+<div id="central">
 <header>
     <h1>Cadastro de Dentista</h1>
     <a href="/">Voltar</a>
@@ -80,5 +83,7 @@
         <button type="submit">Registrar</button>
     </div>
 </form>
+
+</div>
 </body>
 </html>
