--- a/src/main/resources/templates/indexAdmin.html
+++ b/src/main/resources/templates/indexAdmin.html
@@ -6,13 +6,16 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Dashboard</title>
+
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
+<div id="central">
 <a href="/logout">Sair</a>
 
 <h1>Página Admin</h1>
 
 <a href="/cadastro/dentista">Cadastro de Dentista</a>
-
+</div>
 </body>
 </html>
