--- a/src/main/resources/templates/cadastroPaciente.html
+++ b/src/main/resources/templates/cadastroPaciente.html
@@ -14,9 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet"/>
 
     <title>Cadastro de Paciente</title>
+
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 
 <body>
+<div id="central">
 <header>
     <h1>Cadastro de Paciente</h1>
     <span>Já possui um cadastro? <a href="/login">Logar</a></span>
@@ -116,6 +119,7 @@
         <button type="submit">Registrar</button>
     </div>
 </form>
+</div>
 </body>
 
 </html>
