--- a/src/main/resources/templates/cadastroPaciente.html
+++ b/src/main/resources/templates/cadastroPaciente.html
@@ -42,7 +42,7 @@
         </div>
         <div>
             <label for="identidade">RG:</label>
-            <input id="identidade" placeholder="12.345.678-9" th:field="*{pessoaDTO.rg}" type="text"/>
+            <input id="identidade" placeholder="123456789" th:field="*{pessoaDTO.rg}" type="text"/>
             <div th:replace="~{fragments :: listaErros('pessoaDTO.rg')}"></div>
         </div>
         <div>
